repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__api_v1_projects__search.snap
---
source: repology-webapp/tests/snapshot_tests/api_v1_projects.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: application/json
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 105
---
{"pkg_barbar_":[{"repo":"ubuntu_12","visiblename":"","version":"","origversion":null,"status":"newest"}]}
